2003-02-24  Alexandre Duret-Lutz  <adl@gnu.org>

	* ChangeLog: Move 2002's entries to ...
	* ChangeLog.02: ... this new file.
	* Makefile.am (EXTRA_DIST): Add ChangeLog.02.

2003-02-24  Richard Dawe  <rich@phekda.freeserve.co.uk>

	* tests/version7.test: Use $sleep to sleep before updating
	the version, to work around timestamp inconsistencies in Windows.

2003-02-24  Bruno Haible  <bruno@clisp.org>
	    Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/texibuild.am: Don't remove the target info files. Instead,
	back up and restore them if makeinfo fails.
	* tests/txinfo20.test: New file.
	* tests/Makefile.am (TESTS): Add txinfo20.test.

2003-02-23  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (FAQ, CVS, maintainer-mode, wildcards)
	(distcleancheck): Fix typos and other errors reported by Karl
	Berry.

2003-02-20  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/texibuild.am (%SOURCE_SUFFIX%%DEST_SUFFIX%): Use $(...)
	instead of ${...}.

	* tests/defs.in: Handle required=ro-dir.
	* tests/destdir.test: Use this.

2003-02-19  Richard Dawe  <rich@phekda.freeserve.co.uk>

	* lib/am/distdir.am (distcheck): Strip any leading DOS drive
	from dc_install_base.

2003-02-19  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/texinfos.am (install-info-am, uninstall-info-am): Install
	DJGPP-style *.iNN info files.
	(maintainer-clean-aminfo): Rewrite using the same pattern
	as in uninstall-info-am.
	* lib/am/texibuild.am (%SOURCE_SUFFIX%%DEST_SUFFIX%): Erase
	DJGPP-style *.iNN info files before running $(MAKEINFO).
	* tests/txinfo19.test: New file.
	* tests/Makefile.am (TESTS): Add txinfo19.test.

2003-02-18  Richard Dawe  <rich@phekda.freeserve.co.uk>

	* lib/depcomp (dashmstdout): Cope with DOS filenames in
	dependencies.

2003-02-17  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/depcomp (makedepend): Don't pass $object to makedepend.
	Reported by Stepan Kasal.

2003-02-12  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/defs.in: Handle required=makedepend.
