@@ -7625,6 +7625,9 @@ sub read_am_file ($$)
 
     $output_trailer .= $comment;
 
+    error ($where, "trailing backslash on last line")
+      if $saw_bk;
+
     error ($where, (@cond_stack ? "unterminated conditionals: @cond_stack"
 		    : "too many conditionals closed in include file"))
       if "@saved_cond_stack" ne "@cond_stack";
